# dotfiles

./: .editorconfig  .gitconfig  .gitignore  .vimrc  .zshenv  .zshrc  Aptfile  Brewfile  LICENSE.md  Makefile  README.md  gitconfig  install.bash  install.sh  link.bash  package-lock.json  package.json  setup.bash  symlink.bash  vimrc  zshenv
.config/karabiner/: karabiner.json
.config/npm/: npmrc
.config/tmux/: tmux.conf
.config/zsh/: .gitignore  .zshrc  aliases.zsh  anyenv.zsh  direnv.zsh  go.zsh  key-bindings.zsh  plugins.zsh  rust.zsh  theme.zsh
.github/workflows/: actions-lock.json  actions.json  lint.ts  lint.yaml  lint.yml  mac.ts  mac.yaml  mac.yml  pages.ts  pages.yaml  pages.yml  ubuntu.ts  ubuntu.yaml  ubuntu.yml
.hammerspoon/: init.lua
.zsh/: .zsh  aliases.zsh  anyenv.zsh  autoloads.zsh  direnv.zsh  functions.zsh  ls-colors.zsh  theme.zsh
config/alacritty/: alacritty.toml  alacritty.yml
config/almel/: almel.yaml
config/apt/: install.sh
config/zouch/templates/: .clang-format  .czrc  .editorconfig  .qtmut.yaml  .textlintrc  .tmuxinator.yml  CMakeLists.txt  LICENSE.md  README.md  _.c  _.cpp  _.gitignore  _.go  _.h  _.hpp  _.tsx  boost.cmake  compile_flags.txt  cute.cmake  cuutest.cmake  fmt.cmake  googletest.cmake  lefthook.yml  llvm.cmake  main.c  main.cpp  workflow.yml
mac/: .gitignore  Brewfile
scripts/: common.bash  setup-apt.bash  setup-asdf.bash  setup-bun.bash  setup-dein.bash  setup-deno.bash  setup-gdb-dashboard.bash  setup-gh-rd.bash  setup-homebrew.bash  setup-links.bash  setup-mac.bash  setup-zinit.bash  setup.bash  setup.sh
(+299 files in other folders)
